--- a/src/style.css
+++ b/src/style.css
@@ -172,7 +172,7 @@ body {
 }
 
 .card:hover { transform: translateY(-6px); box-shadow: 0 8px 25px rgba(0,0,0,0.15); }
-.card img { width: 100%; height: 300px; object-fit: cover; margin-bottom: 1rem; border-radius: 20px 20px 0px 0px; }
+.card img { width: 100%; height: auto; object-fit: contain; margin-bottom: 1rem; border-radius: 20px 20px 0px 0px; }
 .card h3 { color: #59ffac; font-size: 1.3rem; margin-bottom: 0.5rem; }
 .card .description { font-size: 0.95rem; color: white; margin-bottom: 1rem; padding: 10px; }
 .card .price { font-weight: bold; color: white; }
